--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -5,7 +5,7 @@
       .card.mt-3
         .card-body
           %h1 Forgot your password?
-          = bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, data: { turbo: false }) do |f|
+          = bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
             = render 'devise/shared/error_messages', resource: resource
 
             = f.email_field :email, autofocus: true, label: 'Email address'
