actions/_share: add telegram

--- a/app/views/actions/_share.html.haml
+++ b/app/views/actions/_share.html.haml
@@ -5,5 +5,8 @@
   %a.dropdown-item{ href: tumblr_share_url(answer), target: "_blank" }
     %i.fa.fa-fw.fa-tumblr
     = t(".tumblr")
+  %a.dropdown-item{ href: telegram_share_url(answer), target: "_blank" }
+    %i.fa.fa-fw.fa-telegram
+    = t(".telegram")
   %a.dropdown-item{ href: "#", name: "ab-share" }
     = t(".other")
