Fix print styling for 2FA recovery codes page

--- a/app/views/settings/two_factor_authentication/otp_authentication/recovery_keys.html.haml
+++ b/app/views/settings/two_factor_authentication/otp_authentication/recovery_keys.html.haml
@@ -4,7 +4,7 @@
       .card
         .card-body
           .d-none.d-print-block.totp-setup__recovery-icon
-            %i.fa.fa-comments
+            %img{ src: "/icons/icon.svg", width: 96 }
           %h1.totp-setup__recovery-title= t(".heading", app_name: APP_CONFIG['site_name'])
 
           %ul.totp-setup__recovery-codes
