--- a/app/assets/stylesheets/components/_totp-setup.scss
+++ b/app/assets/stylesheets/components/_totp-setup.scss
@@ -47,6 +47,12 @@
   &__recovery {
     &-container {
       max-width: 455px;
+
+      @media print {
+        .card {
+          box-shadow: none;
+        }
+      }
     }
 
     &-icon {
