Add Stimulus controller for navigation shortcuts

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -107,6 +107,7 @@ $unicodeRangeValues in Lexend.$unicodeMap {
 "components/comments",
 "components/container",
 "components/entry",
+"components/hotkey",
 "components/icons",
 "components/inbox-actions",
 "components/inbox-entry",
