Add hotkey help window

--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -31,6 +31,7 @@
     = render 'shared/announcements'
     = yield
     = render "shared/formatting"
+    = render "shared/hotkeys"
     .d-none#toasts
     - if Rails.env.development?
       #debug
