--- a/app/views/shared/_hotkeys.html.haml
+++ b/app/views/shared/_hotkeys.html.haml
@@ -61,7 +61,7 @@
               %ul.list-group.list-group-flush
                 %li.list-group-item
                   = t('voc.smile')
-                  %kbd l
+                  %kbd s
                 %li.list-group-item
                   = t('.answer.view_comments')
                   %kbd x
