Add shortcut for viewing answer page

--- a/app/views/shared/_hotkeys.html.haml
+++ b/app/views/shared/_hotkeys.html.haml
@@ -71,4 +71,7 @@
                 %li.list-group-item
                   = t('.answer.all_answers')
                   %kbd a
+                %li.list-group-item
+                  = t('.answer.view_answer')
+                  %kbd l
 
