--- a/app/views/question/show.html.haml
+++ b/app/views/question/show.html.haml
@@ -2,7 +2,9 @@
 = render "question", question: @question, hidden: false
 = render "question", question: @question, hidden: true
 .container.question-page
-  #answers
+  #answers{ data: { controller: "navigation" } }
+    %button.d-none{ data: { hotkey: "j", action: "navigation#down" } }
+    %button.d-none{ data: { hotkey: "k", action: "navigation#up" } }
     - @answers.each do |a|
       = render "answerbox", a: a, show_question: false
 
