--- a/app/views/shared/_hotkeys.html.haml
+++ b/app/views/shared/_hotkeys.html.haml
@@ -53,6 +53,9 @@
                   = t('navigation.desktop.ask_question')
                   %kbd n
                 %li.list-group-item
+                  = t('voc.load')
+                  %kbd .
+                %li.list-group-item
                   = t('.show_dialog')
                   %kbd ?
             .card
