--- a/app/views/moderation/reports/index.html.haml
+++ b/app/views/moderation/reports/index.html.haml
@@ -8,6 +8,7 @@
       class: "btn btn-light",
       method: :get,
       params: { last_id: @reports_last_id },
+      data: { hotkey: "." },
       form: { data: { turbo_stream: true } }
 
 - parent_layout "moderation"
