--- a/app/views/timeline/timeline.turbo_stream.haml
+++ b/app/views/timeline/timeline.turbo_stream.haml
@@ -8,4 +8,5 @@
       class: "btn btn-light",
       method: :get,
       params: { last_id: @timeline_last_id },
+      data: { hotkey: "." },
       form: { data: { turbo_stream: true } }
