--- a/app/views/user/show_follow.html.haml
+++ b/app/views/user/show_follow.html.haml
@@ -9,6 +9,7 @@
       class: "btn btn-light",
       method: :get,
       params: { last_id: @relationships_last_id },
+      data: { hotkey: "." },
       form: { data: { turbo_stream: true } }
 
 - provide(:title, t(".title.#{type}", user: @user.profile.safe_name))
