--- a/app/assets/stylesheets/components/_hotkey.scss
+++ b/app/assets/stylesheets/components/_hotkey.scss
@@ -1,5 +1,5 @@
 .js-hotkey-navigating {
-  [data-navigation-target="current"] {
+  .js-hotkey-current-selection {
     outline: var(--primary) solid 4px;
   }
 }
