--- a/app/views/user/show.html.haml
+++ b/app/views/user/show.html.haml
@@ -1,11 +1,14 @@
 - unless @user.banned?
-  #pinned-answers
-    - @pinned_answers.each do |a|
-      = render "answerbox", a:
+  %div{ data: { controller: "navigation" } }
+    %button.d-none{ data: { hotkey: "j", action: "navigation#down" } }
+    %button.d-none{ data: { hotkey: "k", action: "navigation#up" } }
+    #pinned-answers
+      - @pinned_answers.each do |a|
+        = render "answerbox", a:
 
-  #answers
-    - @answers.each do |a|
-      = render "answerbox", a:
+    #answers
+      - @answers.each do |a|
+        = render "answerbox", a:
 
 - if @more_data_available
   .d-flex.justify-content-center.justify-content-sm-start#paginator
