--- a/app/views/shared/_hotkeys.html.haml
+++ b/app/views/shared/_hotkeys.html.haml
@@ -1,8 +1,8 @@
-.modal.fade#modal-hotkeys{ aria: { hidden: true, labelledby: 'modal-hotkeys-label' }, role: :dialog, tabindex: -1 }
+.modal.fade#modal-hotkeys{ aria: { hidden: true, labelledby: "modal-hotkeys-label" }, role: :dialog, tabindex: -1 }
   .modal-dialog
     .modal-content
       .modal-header
-        %h5.modal-title#modal-hotkeys-label= t('.title')
+        %h5.modal-title#modal-hotkeys-label= t(".title")
         %button.btn-close{ data: { bs_dismiss: :modal }, type: :button }
           %span.visually-hidden= t("voc.close")
       .modal-body
@@ -10,71 +10,71 @@
           .col-6
             .card
               .card-header
-                %h5.card-title= t('.navigation.title')
+                %h5.card-title= t(".navigation.title")
               %ul.list-group.list-group-flush
                 %li.list-group-item
-                  = t('navigation.timeline')
+                  = t("navigation.timeline")
                   %kbd
                     %kbd g
                     %kbd t
                 %li.list-group-item
-                  = t('navigation.inbox')
+                  = t("navigation.inbox")
                   %kbd
                     %kbd g
                     %kbd i
                 - if APP_CONFIG.dig(:features, :discover, :enabled) || current_user.mod?
                   %li.list-group-item
-                    = t('navigation.discover')
+                    = t("navigation.discover")
                     %kbd
                       %kbd g
                       %kbd d
                 %li.list-group-item
-                  = t('navigation.notifications')
+                  = t("navigation.notifications")
                   %kbd
                     %kbd g
                     %kbd n
                 %li.list-group-item
-                  = t('navigation.dropdown.profile.profile')
+                  = t("navigation.dropdown.profile.profile")
                   %kbd
                     %kbd g
                     %kbd p
           .col-6
             .card
               .card-header
-                %h5.card-title= t('.global.title')
+                %h5.card-title= t(".global.title")
               %ul.list-group.list-group-flush
                 %li.list-group-item
-                  = t('.global.navigation.up')
+                  = t(".global.navigation.up")
                   %kbd k
                 %li.list-group-item
-                  = t('.global.navigation.down')
+                  = t(".global.navigation.down")
                   %kbd j
                 %li.list-group-item
-                  = t('navigation.desktop.ask_question')
+                  = t("navigation.desktop.ask_question")
                   %kbd n
                 %li.list-group-item
-                  = t('voc.load')
+                  = t("voc.load")
                   %kbd .
                 %li.list-group-item
-                  = t('.show_dialog')
+                  = t(".show_dialog")
                   %kbd ?
             .card
               .card-header
-                %h5.card-title= t('.answer.title')
+                %h5.card-title= t(".answer.title")
               %ul.list-group.list-group-flush
                 %li.list-group-item
-                  = t('voc.smile')
+                  = t("voc.smile")
                   %kbd s
                 %li.list-group-item
-                  = t('.answer.view_comments')
+                  = t(".answer.view_comments")
                   %kbd x
                 %li.list-group-item
-                  = t('.answer.comment')
+                  = t(".answer.comment")
                   %kbd c
                 %li.list-group-item
-                  = t('.answer.all_answers')
+                  = t(".answer.all_answers")
                   %kbd a
                 %li.list-group-item
-                  = t('.answer.view_answer')
+                  = t(".answer.view_answer")
                   %kbd l
 
