--- a/app/views/navigation/dropdown/_notifications.html.haml
+++ b/app/views/navigation/dropdown/_notifications.html.haml
@@ -10,6 +10,9 @@
     %a.dropdown-item.text-center{ href: notifications_path }
       %i.fa.fa-fw.fa-chevron-right
       = t(".new")
+    = link_to notifications_read_path, class: "dropdown-item text-center", data: { turbo_stream: true, turbo_method: :post } do
+      %i.fa.fa-fw.fa-check-double
+      = t(".mark_as_read")
     - notifications.each do |notification|
       .dropdown-item
         = render "notifications/type/#{notification.target.class.name.downcase.split('::').last}", notification: notification
