--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-left: .5rem;
+    margin-left: 0.5rem;
   }
 }
 
