--- a/app/views/answerbox/_comments.html.haml
+++ b/app/views/answerbox/_comments.html.haml
@@ -1,8 +1,8 @@
-- if a.comments.all.count.zero?
+- if comments.all.count.zero?
   = t(".none")
 - else
   %ul.comment__container
-    - a.comments.order(:created_at).each do |comment|
+    - comments.order(:created_at).each do |comment|
       %li.comment{ data: { comment_id: comment.id } }
         %div{ style: "height: 0; width: 0" }= render "modal/comment_smiles", comment: comment
         .d-flex
@@ -24,20 +24,3 @@
               %button.btn.btn-link.btn-sm.dropdown-toggle{ data: { bs_toggle: :dropdown }, aria: { expanded: false } }
                 %span.caret
               = render "actions/comment", comment: comment, answer: a
-- if user_signed_in?
-  %button.d-none{ name: "ab-open-and-comment", data: { a_id: a.id, selection_hotkey: "c" } }
-  .comment__compose-wrapper{
-    name: "ab-comment-new-group",
-    data: { a_id: a.id, controller: "character-count", character_count_max_value: 512 }
-  }
-    .form-group.has-feedback.comment__input-group.input-group
-      %textarea.form-control.comment__input{ type: :text, placeholder: t(".placeholder"), name: "ab-comment-new", data: { a_id: a.id, "character-count-target": "input" } }
-    .comment__submit-wrapper
-      %button.btn.btn-primary{
-        type: :button,
-        name: "ab-comment-new-submit",
-        title: t(".action"),
-        data: { a_id: a.id, "character-count-target": "action" }
-      }
-        %i.fa.fa-paper-plane-o
-      %span.text-muted.form-control-feedback.comment__character-count{ id: "ab-comment-charcount-#{a.id}", data: { "character-count-target": "counter" } } 512
