--- a/app/views/inbox/show.html.haml
+++ b/app/views/inbox/show.html.haml
@@ -11,5 +11,5 @@
       class: "btn btn-light",
       method: :get,
       params: { last_id: @inbox_last_id, author: @author }.compact,
-      data: { hotkey: "." },
+      data: { controller: :hotkey, hotkey: "." },
       form: { data: { turbo_stream: true } }
