--- a/app/views/moderation/inbox/index.html.haml
+++ b/app/views/moderation/inbox/index.html.haml
@@ -14,5 +14,5 @@
         class: "btn btn-light",
         method: :get,
         params: { last_id: @inbox_last_id },
-        data: { hotkey: "." },
+        data: { controller: :hotkey, hotkey: "." },
         form: { data: { turbo_stream: true } }
