--- a/app/views/moderation/inbox/index.turbo_stream.haml
+++ b/app/views/moderation/inbox/index.turbo_stream.haml
@@ -8,5 +8,5 @@
       class: "btn btn-light",
       method: :get,
       params: { last_id: @inbox_last_id },
-      data: { hotkey: "." },
+      data: { controller: :hotkey, hotkey: "." },
       form: { data: { turbo_stream: true } }
