--- a/app/views/navigation/dropdown/_notifications.html.haml
+++ b/app/views/navigation/dropdown/_notifications.html.haml
@@ -1,12 +1,12 @@
 - if notifications.count.zero?
-  %a.dropdown-item.text-center{ href: notifications_path('all') }
+  %a.dropdown-item.text-center{ href: notifications_path('all'), data: { turbo_frame: "_top" } }
     %i.fa.fa-fw.fa-chevron-right
     = t(".all")
   .dropdown-item.text-center.p-2
     %i.fa.fa-bell-o.notification__bell-icon
     %p= t(".none")
 - else
-  %a.dropdown-item.text-center{ href: notifications_path }
+  %a.dropdown-item.text-center{ href: notifications_path, data: { turbo_frame: "_top" } }
     %i.fa.fa-fw.fa-chevron-right
     = t(".new")
   = link_to notifications_read_path, class: "dropdown-item text-center", data: { turbo_stream: true, turbo_method: :post } do
