--- a/app/views/question/show.turbo_stream.haml
+++ b/app/views/question/show.turbo_stream.haml
@@ -1,6 +1,6 @@
 = turbo_stream.append "answers" do
   - @answers.each do |a|
-    = render "answerbox", a:, show_question: false, subscribed_answer_ids:
+    = render "answerbox", a:, show_question: false, subscribed_answer_ids: @subscribed_answer_ids
 
 = turbo_stream.update "paginator" do
   - if @more_data_available
