Move keyboard shortcuts menu entry out of canny if clause

--- a/app/views/navigation/dropdown/_profile.html.haml
+++ b/app/views/navigation/dropdown/_profile.html.haml
@@ -34,10 +34,10 @@
       %i.fa.fa-fw.fa-flask
       = t(".feedback.features")
     .dropdown-divider
-    %a.dropdown-item{ href: "#", data: { bs_target: "#modal-hotkeys", bs_toggle: "modal", hotkey: "Shift+?,?" } }
-      %i.fa.fa-keyboard
-      = t(".hotkeys")
-    .dropdown-divider
+  %a.dropdown-item{ href: "#", data: { bs_target: "#modal-hotkeys", bs_toggle: "modal", hotkey: "Shift+?,?,Shift+ß" } }
+    %i.fa.fa-keyboard
+    = t(".hotkeys")
+  .dropdown-divider
   = link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" do
     %i.fa.fa-fw.fa-sign-out
     = t("voc.logout")
