--- a/app/views/navigation/_main.html.haml
+++ b/app/views/navigation/_main.html.haml
@@ -1,8 +1,7 @@
 :ruby
-  notifications = Notification.for(current_user).where(new: true).includes([:target]).limit(4)
   inbox_count = current_user.unread_inbox_count
   notification_count = current_user.unread_notification_count
-= render "navigation/desktop", notifications:, inbox_count:, notification_count:
+= render "navigation/desktop", inbox_count:, notification_count:
 = render "navigation/mobile", inbox_count:, notification_count:
 
 = render "modal/ask"
