Fix 500 when not logged in

--- a/app/views/shared/_hotkeys.html.haml
+++ b/app/views/shared/_hotkeys.html.haml
@@ -22,7 +22,7 @@
                   %kbd
                     %kbd g
                     %kbd i
-                - if APP_CONFIG.dig(:features, :discover, :enabled) || current_user.mod?
+                - if APP_CONFIG.dig(:features, :discover, :enabled) || current_user&.mod?
                   %li.list-group-item
                     = t("navigation.discover")
                     %kbd
