--- a/app/views/notifications/type/_dataexport.html.haml
+++ b/app/views/notifications/type/_dataexport.html.haml
@@ -5,4 +5,4 @@
     %h6.notification__user
       = t(".heading")
     .notification__text
-      = t(".text_html", settings_export: link_to(t(".settings_export"), settings_export_path))
+      = t(".text_html", settings_export: link_to(t(".settings_export"), settings_export_path, target: "_top"))
