--- a/app/views/notifications/type/_webpushsubscription.html.haml
+++ b/app/views/notifications/type/_webpushsubscription.html.haml
@@ -7,4 +7,4 @@
     %h6.notification__user
       = t(".heading")
     .notification__text
-      = t(".text_html", settings_push: link_to(t(".settings_push"), settings_push_notifications_path))
+      = t(".text_html", settings_push: link_to(t(".settings_push"), settings_push_notifications_path, target: "_top"))
