--- a/app/views/settings/mutes/_form.html.haml
+++ b/app/views/settings/mutes/_form.html.haml
@@ -1,6 +1,6 @@
 #form.form-group
   %form{ action: settings_muted_path, method: "post" }
     .input-group
-      %input.form-control#muted_phrase{ name: :muted_phrase, placeholder: t(".placeholder"), data: { controller: :autofocus } }
+      %input.form-control#muted_phrase{ name: :muted_phrase, placeholder: t(".placeholder"), required: true, minlength: 1, data: { controller: :autofocus } }
       .input-group-append
         %button.btn.btn-primary{ type: "submit" }= t("voc.add")
