Name label iOS instead of iPhone

--- a/app/views/settings/two_factor_authentication/otp_authentication/_totp_setup.html.haml
+++ b/app/views/settings/two_factor_authentication/otp_authentication/_totp_setup.html.haml
@@ -38,7 +38,7 @@
                 %a{ href: "https://play.google.com/store/apps/details?id=com.azure.authenticator" }= t(".source.google_play")
           %li
             %i.fa.fa-apple
-            = t(".app.iphone")
+            = t(".app.ios")
             %ul.list-inline
               %li.list-inline-item
                 %a{ href: "https://support.apple.com/en-gb/guide/iphone/ipha6173c19f/ios" }= t(".source.apple_support")
