--- a/app/views/answerbox/_smiles.html.haml
+++ b/app/views/answerbox/_smiles.html.haml
@@ -9,4 +9,4 @@
         %a{ href: user_path(smile.user),
           title: user_screen_name(smile.user, url: false),
           data: { bs_toggle: :tooltip, bs_placement: :top, smile_id: smile.id } }
-          %img.avatar-xs{ src: smile.user.profile_picture.url(:small), loading: :lazy }
+          = render AvatarComponent.new(user: smile.user, size: "xs")
