--- a/app/views/navigation/_mobile.html.haml
+++ b/app/views/navigation/_mobile.html.haml
@@ -12,5 +12,5 @@
         badge: notification_count, badge_color: "primary", badge_attr: { id: "notification-mobile-count" }, icon_only: true
       %li.nav-item.profile--image-dropdown
         %a.nav-link{ href: '#', data: { bs_toggle: 'dropdown', bs_target: '#rs-mobile-nav-profile' }, aria: { controls: 'rs-mobile-nav-profile', expanded: 'false' } }
-          %img.avatar-md.d-inline{ src: current_user.profile_picture.url(:small) }
+          = render AvatarComponent.new(user: current_user, size: "md", classes: ["d-inline"])
         = render 'navigation/dropdown/profile', size: "mobile"
