--- a/app/views/notifications/type/_answer.html.haml
+++ b/app/views/notifications/type/_answer.html.haml
@@ -3,7 +3,7 @@
     %i.fa.fa-2x.fa-fw.fa-exclamation
   .flex-grow-1
     .notification__heading
-      %img.avatar-xs{ src: notification.target.user.profile_picture.url(:small), loading: :lazy }
+      = render AvatarComponent.new(user: notification.target.user, size: "xs")
       = t(".heading_html",
           user: user_screen_name(notification.target.user),
           question: link_to(t(".link_text"), answer_path(username: notification.target.user.screen_name, id: notification.target.id), target: "_top"),
