--- a/app/views/question/_question.html.haml
+++ b/app/views/question/_question.html.haml
@@ -5,7 +5,7 @@
         - unless question.author_is_anonymous
           .flex-shrink-0
             %a{ href: unless hidden then user_path(question.user) end }
-              %img.answerbox__question-user-avatar.avatar-md{ src: question.user.profile_picture.url(:small) }
+              = render AvatarComponent.new(user: question.user, size: "md", classes: ["answerbox__question-user-avatar"])
         .flex-grow-1
           %h6.text-muted.answerbox__question-user
             - identifier = question.author_is_anonymous ? question.author_identifier : nil
