--- a/app/views/settings/mutes/_user.html.haml
+++ b/app/views/settings/mutes/_user.html.haml
@@ -1,5 +1,5 @@
 .d-flex.mb-2
-  %img.avatar-md.me-2{ src: user.profile_picture.url(:small), loading: :lazy }
+  = render AvatarComponent.new(user:, size: "md", classes: ["me-2"])
   %p.align-self-center.m-0= user_screen_name(user, context_user: current_user)
   .ms-auto.d-inline-flex
     %button.btn.btn-default.align-self-center{ data: { action: :unmute, target: user.screen_name } }
